# studies

./: .gitignore  README.md
AWS seminars/AWS workshop - 整合檢索與向量資料庫實作體驗，以DocumentDB為例實作整合檢索/1st session/: document-db-workshop.ipynb  movie_data.csv
AWS seminars/AWS workshop - 整合檢索與向量資料庫實作體驗，以DocumentDB為例實作整合檢索/2nd session/: Amazon Q notes.md
MCP/: agent.py
MCP/Python_on_PyPI/client/ADK/adk_agent_samples/mcp_agent/: agent.py
MCP/Python_on_PyPI/server/mcp-server-demo/src/mcp_web_extractor_riversoft.egg-info/: PKG-INFO  entry_points.txt
MCP/Python_on_PyPI/server/mcp-server-demo/src/web_extractor/: __init__.py
MCP/TypeScript_on_Cloudflare/: package-lock.json  wrangler.toml
MCP/TypeScript_on_Cloudflare/.wrangler/tmp/bundle-P2bcZv/: middleware-loader.entry.ts
MCP/TypeScript_on_Cloudflare/.wrangler/tmp/dev-6VLyjR/: index.js
MCP/client/: adk_agent.py
MCP/server/Python_on_PyPI/client/ADK/: pyproject.toml
MCP/server/Python_on_PyPI/server/mcp-server-demo/: pyproject.toml
MCP/server/Python_on_PyPI/server/mcp-server-demo/src/mcp_web_extractor_riversoft.egg-info/: SOURCES.txt  requires.txt  top_level.txt
MCP/server/Python_on_PyPI/server/mcp-server-demo/src/web_extractor/: server.py
MCP/server/TypeScript_on_Cloudflare/: package.json
MCP/server/TypeScript_on_Cloudflare/.wrangler/tmp/bundle-P2bcZv/: middleware-insertion-facade.js
MCP/server/TypeScript_on_Cloudflare/.wrangler/tmp/bundle-pFFs9X/: middleware-loader.entry.ts
MCP/server/TypeScript_on_Cloudflare/slides/: wrangler-example.md
MCP/server/TypeScript_on_Cloudflare/src/: index.ts
RVC/: README.md
(+3 files in other folders)
