[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-web-extractor-riversoft"
version = "0.1.2"
description = "MCP server that extracts content from web pages for LLMs"
readme = "README.md"
authors = [
    {name = "Thomas Tan", email = "thomas.tan.lian.hui@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "requests",
    "beautifulsoup4",
    "bs4>=0.0.2",
]
requires-python = ">=3.10"

[project.scripts]
mcp-web-extractor-riversoft = "web_extractor.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
